# sscs

./: .gitignore  Procfile  README.md  manage.py  package-lock.json  package.json  pyproject.toml  tasks.py  webpack.config.js
spec/: email_from_vanessa.txt
sscs/: apps.py  asgi.py  constants.py  db.sqlite3  forms.py  models.py  settings.py  urls.py  utils.py  wsgi.py
sscs/javascript/: controllers.js  index.js  utils.js
sscs/migrations/: 0004_auto_20210703_1932.py  0007_client_head_of_household.py  0008_client_cid.py  0009_alter_client_cid.py
sscs/reflexes/: new_client.py  test_reflex_reflex.py
sscs/settings/: base.py  heroku.py
sscs/sscs/: admin.py  asgi.py  forms.py  models.py  settings.py  urls.py  views.py
sscs/sscs/javascript/: controllers.js  index.js
sscs/sscs/migrations/: 0001_initial.py  0002_auto_20210520_1815.py  0003_auto_20210603_0602.py  0005_auto_20210706_2003.py  0006_auto_20210706_2006.py
sscs/sscs/reflexes/: new_client.py
sscs/sscs/templates/: base.html  test_reflex.html
sscs/sscs/templates/sscs/: new_client.html
sscs/sscs/views/: __init__.py
sscs/static/js/: controllers.js  controllers.js.map  index.js  index.js.map
sscs/templates/: base.html
sscs/templates/registration/: login.html
sscs/templates/sscs/: new_client.html
sscs/theme/static_src/: package-lock.json
sscs/theme/templates/: base.html
sscs/views/: __init__.py  test_reflex.py
static/js/: controllers.js  controllers.js.map  index.js  index.js.map
